testsuite/tests/th/T8412.stderr

T8412.hs:5:11: error:
    • Illegal literal in type (type literals must not be negative): -1
    • In the untyped splice: $(return $ LitT $ NumTyLit (- 1))
