testsuite/tests/th/T8412.hs
{-# LANGUAGE TemplateHaskell, DataKinds #-}

import Language.Haskell.TH

type T = $(return $ LitT $ NumTyLit (-1))
